tests/snapshots/scripts_sanitized/Admin API Tool/Notifications - ID 94/Get Email Notification Settings - ID 96.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Get Email Notification Settings
#  HISTORY:
				   - Created:   2020-01-11 by Mike Duncan (mduncan@soliantconsulting.com)
				   - Modified:  

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/server/notifications/email" ]
Variable setzen [ $curloptions ; " --request GET" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --dump-header $$my.headers" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

Wenn [ Hole ( ScriptErgebnis ) = "1" ]
	# parse json response
	Feldwert setzen [ FMS__fmserver::customHostName ; JSONGetElement ( $$my.result ; "response.customHostName" ) ]
	Feldwert setzen [ FMS__fmserver::emailNotification ; JSONGetElement ( $$my.result ; "response.emailNotification" ) ]
	Feldwert setzen [ FMS__fmserver::emailSenderAddress ; JSONGetElement ( $$my.result ; "response.emailSenderAddress" ) ]
	Feldwert setzen [ FMS__fmserver::emailReplyAddress ; JSONGetElement ( $$my.result ; "response.emailReplyAddress" ) ]
	Feldwert setzen [ FMS__fmserver::emailRecipients ; JSONGetElement ( $$my.result ; "response.emailRecipients" ) ]
	Feldwert setzen [ FMS__fmserver::smtpServerAddress ; JSONGetElement ( $$my.result ; "response.smtpServerAddress" ) ]
	Feldwert setzen [ FMS__fmserver::smtpServerPort ; JSONGetElement ( $$my.result ; "response.smtpServerPort" ) ]
	Feldwert setzen [ FMS__fmserver::smtpAccount ; JSONGetElement ( $$my.result ; "response.smtpAccount" ) ]
	Feldwert setzen [ FMS__fmserver::smtpAuthType ; JSONGetElement ( $$my.result ; "response.smtpAuthType" ) ]
	Feldwert setzen [ FMS__fmserver::smtpSecurity ; JSONGetElement ( $$my.result ; "response.smtpSecurity" ) ]
	
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
